--- a/Notebooks/diabetes.ipynb
+++ b/Notebooks/diabetes.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "a688a502",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import libraries\n",
     "import pandas as pd \n",
     "import numpy as np\n",
     "import seaborn as sns\n",
