Added a comment to the notebook at file importation

--- a/Notebooks/diabetes.ipynb
+++ b/Notebooks/diabetes.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "460594e6",
    "metadata": {},
    "outputs": [
@@ -888,6 +888,7 @@
     }
    ],
    "source": [
+    "# Importing the dataset\n",
     "data= pd.read_csv(\"diabetes.csv\")\n",
     "data"
    ]
