--- a/Notebooks/diabetes.ipynb
+++ b/Notebooks/diabetes.ipynb
@@ -888,7 +888,7 @@
     }
    ],
    "source": [
-    "# Importing the dataset\n",
+    "# Loading the data\n",
     "data= pd.read_csv(\"diabetes.csv\")\n",
     "data"
    ]
